--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
+    "animejs": "^3.2.2",
     "element-plus": "^2.9.6",
     "normalize.css": "^8.0.1",
     "vue": "^3.5.13",
