feat(auth): add Ant Design icons for third-party login buttons
- Integrate icon from @ant-design/icons-vue
- Add QQ/Wechat/Alipay button icons in LoginView

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "animejs": "^3.2.2",
     "element-plus": "^2.9.6",
     "normalize.css": "^8.0.1",
