--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "animejs": "^3.2.2",
     "axios": "^1.8.4",
+    "element-china-area-data": "^6.1.0",
     "element-plus": "^2.9.6",
     "normalize.css": "^8.0.1",
     "vue": "^3.5.13",
